feat: refactoring logic project